<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="#FF9800"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <EditText
            android:id="@+id/txt_num"
            android:layout_width="267dp"
            android:layout_height="57dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_n"
            android:inputType="number"
            android:textColor="#F7FFFFFF"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="72dp">

            <RadioButton
                android:id="@+id/r_fibonacci"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/r_fibon"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/r_replicapares"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/r_replicapar"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/r_binario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/r_bina"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="257dp"
            android:layout_height="57dp"
            android:layout_marginStart="76dp"
            android:layout_marginLeft="76dp"
            android:layout_marginTop="88dp"
            android:background="#0ED616"
            android:text="@string/btn_calcular"
            android:textColor="#070707"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>